--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,17 +1,16 @@
 .odd {
     background-color: rgb(255 0 0 / 0.5);
-    font-family: Verdana, DejaVu sans,sans-serif;
+    font-family: Verdana, "DejaVu sans", sans-serif;
 }
 #second-element {
     color: blue;
     font-size: 36px;
 }
-.third {
+.adjust-font {
     font-size: 24px;
 }
 
 #fourth {
     background-color: rgb(0, 233, 71, 0.5);
-    font-size: 24px;
     font-weight: bold;
 }
